src/scss/main.scss
/* ... */
.braintree-sheet__content--form {
  padding: 10px 15px 10px 10px;

  .braintree-form__field-group {
    margin-bottom: 10px;
    padding-left: 5px;

    &.braintree-form__field-group--has-error {
      margin-bottom: 3px;

      .braintree-form__field .braintree-form__hosted-field {
        border-color: $error-color;

        &:hover {
          border-color: $error-color;
        }
      }
    }

    .braintree-form__label {
      color: $text-color;
      display: block;
      font-size: 14px;
      font-weight: normal;
      line-height: 1.4;
      margin: 0;
      padding: 0;
      text-align: left;
    }

    .braintree-form__descriptor {
      color: $border-color;
      font-size: 13px;
      margin-left: 6px;
    }

    .braintree-form__field {
      position: relative;

      label {
        cursor: text;
        display: block;
        margin: 0;
      }

      .braintree-form__icon-container {
        margin-top: -14px;
        position: absolute;
        right: 11px;
        top: 50%;
      }

      .braintree-form__hosted-field {
        border: 1px solid $black-75;
        height: 44px;
        margin: 4px 0 0;
        padding: 0 8px;

        &:hover {
          border-color: $border-color-hover;
        }

        &.braintree-form__field--valid {
          border-color: $black-40;
        }

        input {
          border:none;
          background-image:none;
          background-color:transparent;
          -webkit-box-shadow: none;
          -moz-box-shadow: none;
          box-shadow: none;
          width: 100%;
          height: 100%;
          font-size: 16px;
          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
          color: rgb(0, 0, 0);

          &:focus {
            outline: none;
          }
        }
      }
    }

    &.braintree-form__field-group--has-error .braintree-form__field-secondary-icon,
    &.braintree-form__field-group--has-error.braintree-form__field-group--card-type-known .braintree-form__field-secondary-icon,
    &.braintree-form__field-group--has-error.braintree-form__field-group--is-focused .braintree-form__field-secondary-icon,
    .braintree-form__field-error-icon,
    .braintree-form__field-secondary-icon {
      display: none;
      transform: scale(0);
    }

    &.braintree-form__field-group--card-type-known .braintree-form__field-secondary-icon,
    &.braintree-form__field-group--has-error .braintree-form__field-error-icon,
    &.braintree-form__field-group--is-focused .braintree-form__field-secondary-icon {
      display: block;
      transform: scale(1);
    }

    .braintree-form__field-error {
      color: $error-color;
      display: none;
      font-size: 13px;
      line-height: 1.4;
      margin: 3px 0;
      padding: 0;
    }

    .braintree-form__field-error-icon {
      margin-top: 2px;

      use {
        fill: $error-color;
      }
    }

    &.braintree-form__field-group--has-error .braintree-form__field-error {
      display: block;
    }
  }

  .braintree-form__flexible-fields {
    display: flex;

    flex-wrap: wrap;
    justify-content: space-between;

    .braintree-form__field-group {
      flex-basis: 190px;
      flex-grow: 1;
    }
  }
}

/* =========================================================================
   Payment Methods
   ========================================================================= */
.braintree-method {
  align-items: center;
  background-color: white;
  border-color: $border-color;
  border-style: solid;
  border-width: 0 1px 1px 1px;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  margin: 0 auto;
  padding: 14px 10px;
  position: relative;
  transition: opacity 300ms, width 200ms $curve-easeOutBack, border-color 300ms, border-radius 300ms;
  width: 98%;
  z-index: 0;

  &.braintree-method--disabled {
    .braintree-method__delete-container {
      position: relative;
      background: darken(#EAEAEA, 20%);
      @include disabled;

      .braintree-method__disabled-description {
        position: absolute;
        background: rgba(0, 0, 0, .7);
        right: -5px;
        z-index: 999999;
        color: white;
        padding: 5px;
        border-radius: 5px;
        top: 1px;
        width: 250px;
      }

      &:hover .braintree-method__disabled-description {
        display: block;
      }
    }
  }

  .braintree-method__disabled-description {
    text-align: right;
    font-size: 12px;
    display: none;
  }

  &:hover .braintree-method__label {
    font-weight: 500;
  }

  &:first-child {
    border-radius: $radius-default $radius-default 0 0;
    border-top-width: 1px;
  }

  &:last-child {
    border-radius: 0 0 $radius-default $radius-default;
  }

  &:only-child {
    border-radius: $radius-default;
  }

  .braintree-method__logo {
    align-items: center;
    display: flex;
    justify-content: center;
  }

  .braintree-method__label {
    color: $text-color;
    flex-grow: 1;
    font-size: 16px;
    margin-left: 20px;
    text-align: left;
    flex-grow: 1;

    .braintree-method__label--small {
      font-size: 13px;
      font-weight: normal;
    }
  }

  .braintree-method__icon {
    background-color: $background-color;
    border-radius: 100px;
    fill: $background-color;
    height: 41px;
    width: 41px;
    padding: 10px;
    transform: scale(0);
    transition: transform 300ms $curve-easeOutBack;

    svg {
      width: 100%;
    }
  }
}

.braintree-methods--edit .braintree-method {
  cursor: auto;
}
/* ... */

